crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_chat_with_conversation.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │❯ What files are in the project?                                     ┌ Today ───────────────────┐
  │  ⏵ shell · Calling shell... · 0.0s                                  │Brief                     │
  │  ▸ shell result                                                     │(no brief yet — run /day t│
  │    Cargo.toml                                                       │                          │
  │    crates/                                                          │                          │
  │    plugins/                                                         │                          │
  │                                                                     │                          │
  ││ The project has a Cargo.toml, crates/ and plugins/ directories.    │                          │
  │                                                                     │                          │
  │  ───────────────────────────────────────────────────────────────────│                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
 ▸│                                                                     │Action items              │
  │                                                                     │(no action items)         │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model │ no workstream Ready
