crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_chat_with_signal_sources_chip.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │❯ What did we decide about Postgres?                                 ┌ Today ───────────────────┐
  │  ⏵ signal_search · Calling signal_search... · 0.0s                  │Brief                     │
  │  ▸ signal_search result (93 chars — Ctrl+E to expand)               │(no brief yet — try /brief│
  │    {"results":[{"lens":"work","title":"use Postgres 16"},{"lens"…   │                          │
  │                                                                     │                          │
  ││ We decided to use Postgres 16 for the ledger.                      │                          │
  ││ ◆ sources: personal · work                                         │                          │
  │                                                                     │                          │
  │  ───────────────────────────────────────────────────────────────────│                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
 ▸│                                                                     │Action items              │
  │                                                                     │(no action items)         │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model Ready
