crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_dashboard_actions_with_items.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │                                                                                         ┌ Today ───────────────────┐
  │                                                                                         │Brief                     │
  │                                                                                         │2026-05-19 · Tue          │
  │                                                                                         │                          │
  │                                                                                         │(no calendar events today)│
  │                                                                                         │                          │
  │                                     ╭─────────────╮                                     │                          │
  │                                     │    arawn    │                                     │                          │
  │                                     ╰─────────────╯                                     │                          │
  │                                                                                         │                          │
 ▸│                       Welcome — your personal agentic assistant.                        │                          │
  │                 I watch, check, summarize, and nudge across your tools.                 │                          │
  │                                                                                         │                          │
  │                       Type / for commands · Tab to toggle sidebar                       │Action items              │
  │                              /connect <service> · ↑ recall                              │☐ Reply Alice RFC-0042    │
  │                                                                                         │☐ Review PR #482          │
  │                                                                                         │☐ ENG-712 stale 10d       │
  │                                                                                         │─ Carried over ─          │
  │                                                                                         │☐ Carried: dust falcon    │
  │                                                                                         │                          │
  │                                                                                         └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model Ready
