crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_dashboard_brief_with_calendar.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │                                                                                         ┌ Today ───────────────────┐
  │                                                                                         │Brief                     │
  │                                                                                         │2026-05-19 · Tue          │
  │                                                                                         │                          │
  │                                                                                         │• 09:00 standup — platform│
  │                                                                                         │• 13:00 1:1 with Jamie    │
  │                                     ╭─────────────╮                                     │                          │
  │                                     │    arawn    │                                     │                          │
  │                                     ╰─────────────╯                                     │                          │
  │                                                                                         │                          │
 ▸│                       Welcome — your personal agentic assistant.                        │                          │
  │                 I watch, check, summarize, and nudge across your tools.                 │                          │
  │                                                                                         │                          │
  │                       Type / for commands · Tab to toggle sidebar                       │Action items              │
  │                              /connect <service> · ↑ recall                              │(no action items)         │
  │                                                                                         │                          │
  │                                                                                         │                          │
  │                                                                                         │                          │
  │                                                                                         │                          │
  │                                                                                         │                          │
  │                                                                                         └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model Ready
