crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_empty_app.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │                                                                     ┌ Today ───────────────────┐
  │                                                                     │Brief                     │
  │                                                                     │(no brief yet — run /day t│
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                           ╭─────────────╮                           │                          │
  │                           │    arawn    │                           │                          │
  │                           ╰─────────────╯                           │                          │
  │                                                                     │                          │
 ▸│             Welcome — your personal agentic assistant.              │Action items              │
  │       I watch, check, summarize, and nudge across your tools.       │(no action items)         │
  │                                                                     │                          │
  │             Type / for commands · Tab to toggle sidebar             │                          │
  │                    /connect <service> · ↑ recall                    │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model Ready
