crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_error_in_chat.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │❯ do something                                                       ┌ Today ───────────────────┐
  ││ system:                                                            │Brief                     │
  ││ Error: API rate limited                                            │(no brief yet — run /day t│
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
 ▸│                                                                     │Action items              │
  │                                                                     │(no action items)         │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model │ ✎ scratch Ready
