crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_focus_main.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │                                                                     ┌ Today ───────────────────┐
  │                                                                     │Brief                     │
  │                                                                     │(no brief yet — try /brief│
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                           ╭─────────────╮                           │                          │
  │                           │    arawn    │                           │                          │
  │                           ╰─────────────╯                           │                          │
  │                                                                     │                          │
  │             Welcome — your personal agentic assistant.              │                          │
  │       I watch, check, summarize, and nudge across your tools.       │                          │
 ▸│                                                                     │Action items              │
  │                     No LLM provider configured.                     │(no action items)         │
  │                   Run `arawn doctor` to diagnose.                   │                          │
  │               Edit `~/.arawn/arawn.toml` to set one.                │                          │
  │                                                                     │                          │
  │             Type / for commands · Tab to toggle sidebar             │                          │
  │                    /connect <service> · ↑ recall                    │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> hello world
 no model Ready
