crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_focus_main_with_messages.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │                                                                     ┌ Today ───────────────────┐
  ││ Some response text.                                                │Brief                     │
  │                                                                     │(no brief yet — run /day t│
  │  ───────────────────────────────────────────────────────────────────│                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
 ▸│                                                                     │Action items              │
  │                                                                     │(no action items)         │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model │ no workstream Ready
