crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_focus_sidebar.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
┌ Lenses ──────────┐                                                    ┌ Today ───────────────────┐
│▸ scratch         │                                                    │Brief                     │
│                  │                                                    │(no brief yet — run /day t│
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │Action items              │
│                  │                                                    │(no action items)         │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
│                  │                                                    │                          │
└──────────────────┘                                                    └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model Ready
