crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_idle_hero_no_model_configured.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │                                                                     ┌ Today ───────────────────┐
  │                                                                     │Brief                     │
  │                                                                     │(no brief yet — try /brief│
  │                                                                     │                          │
  │                           ╭─────────────╮                           │                          │
  │                           │    arawn    │                           │                          │
  │                           ╰─────────────╯                           │                          │
  │                                                                     │                          │
  │             Welcome — your personal agentic assistant.              │                          │
  │       I watch, check, summarize, and nudge across your tools.       │                          │
 ▸│                                                                     │                          │
  │                     No LLM provider configured.                     │                          │
  │                   Run `arawn doctor` to diagnose.                   │                          │
  │               Edit `~/.arawn/arawn.toml` to set one.                │Action items              │
  │                                                                     │(no action items)         │
  │             Type / for commands · Tab to toggle sidebar             │                          │
  │                    /connect <service> · ↑ recall                    │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model Ready
