crates/arawn-tui/src/snapshots/arawn_tui__snapshot_tests__tests__snapshot_idle_hero_partial_brief_only_placeholders.snap
---
source: crates/arawn-tui/src/snapshot_tests.rs
expression: snap
---
  │  Brief — 2026-05-19                                                 ┌ Today ───────────────────┐
  │  Today                                                              │Brief                     │
  │  • 09:00 standup                                                    │(no brief yet — run /day t│
  │  This week                                                          │                          │
  │  (no weekly tablet — Monday's ceremony will produce one)            │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
 ▸│                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │Action items              │
  │                                                                     │(no action items)         │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     │                          │
  │                                                                     └──────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
> Type your message...
 no model Ready
